--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     />
   </head>
   <body>
-    <script src="/js/jquery.min.js"></script>
+    <!-- <script src="/js/jquery.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
-    <script src="/js/slick.min.js"></script>
+    <script src="/js/slick.min.js"></script> -->
     <script src="/js/wow.min.js"></script>
-    <script src="/js/custom.js"></script>
+    <!-- <script src="/js/custom.js"></script> -->
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     
